[project]
name = "ma-sf-exp"
version = "0.4.0"
description = "Experiment to programmatically access and manage Salesforce data."
authors = [{name="Felix Fennell", email="ffennell@mapaction.org"}]
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.4.1",
    "pyjwt>=2.10.1",
    "simple-salesforce>=1.12.6",
    "streamlit-nightly>=1.41.2.dev20250131",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
]

[tool.ruff]
src = ["src"]
line-length = 120
target-version = "py313"
