[project]
name = "ma-sf-exp"
version = "0.5.0"
description = "Experiment to programmatically access and manage Salesforce data."
authors = [{name="Felix Fennell", email="ffennell@mapaction.org"}]
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.5.2",
    "simple-salesforce>=1.12.6",
    "streamlit>=1.44.1",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]

[tool.ruff]
src = ["src"]
line-length = 120
target-version = "py313"
